# reservoir

./: .clang-format  .gitignore  CMakeLists.txt  README.md
benchmark/: res.cpp  run.sh
benchmark/fh2/: strong.sh  strong_big.sh  submit_strong.sh  submit_strong_big.sh  submit_weak.sh  submit_weak_big.sh  weak.sh  weak_big.sh
reservoir/: aggregate.hpp  ams_select.hpp  ams_select_multi.hpp  btree.hpp  btree_map.hpp  btree_multimap.hpp  btree_multiset.hpp  btree_set.hpp  logger.hpp  reservoir.hpp  reservoir_gather.hpp  select_helpers.hpp  stats.hpp  timer.hpp  util.hpp
reservoir/generators/: dSFMT.hpp  dSFMT_internal.cpp  dSFMT_internal.hpp  mkl.cpp  mkl.hpp  select.hpp  stl.hpp
tests/: CMakeLists.txt  btree_fail.cpp  btree_speedtest-data.txt  btree_speedtest.cpp  btree_speedtest.plot  btree_test.cpp
